# KingOfNewYork

./: CMakeLists.txt
KingOfNewYork_A4/: aggressive_strategy.cpp  aggressive_strategy.h  card_exec.cpp  card_exec.h  dice_rolling.cpp  dice_rolling.h  dice_view.cpp  dice_view.h  engine.cpp  engine.h  human_strategy.cpp  human_strategy.h  input.cpp  input.h  main.cpp  map.cpp  map.h  map_finder.cpp  map_finder.h  map_loader.cpp  map_loader.h  moderate_strategy.cpp  moderate_strategy.h  observer.cpp  observer.h  player.cpp  player.h  player_view.cpp  player_view.h  power_cards.cpp  power_cards.h  resolve.cpp  resolve.h  statistics_view.cpp  statistics_view.h  strategy.cpp  strategy.h  subject.cpp  subject.h  tiles.cpp  (+3 more)
KingOfNewYork_A4.xcodeproj/: project.pbxproj
KingOfNewYork_A4.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KingOfNewYork_A4.xcodeproj/xcuserdata/jeremygaudet.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
KingOfNewYork_A4.xcodeproj/xcuserdata/jeremygaudet.xcuserdatad/xcschemes/: KingOfNewYork_A2.xcscheme  xcschememanagement.plist
KingOfNewYork_A4/deck_info/: cards.json
maps/: Untitled.txt  faulty.map  newyork.map
maps/fake_directory/: dir_faulty2.map
